our service is all done

--- a/index.html
+++ b/index.html
@@ -79,7 +79,42 @@
               <i class="fa-solid fa-arrow-up-right-from-square"></i>
             </a>
           </li>
+          <li class="service-item2">
+            <img
+              src="image/techpassion01.jpg"
+              class="fadein-scroll fadein-from-down fadein-active01"
+            />
+            <a class="fadein-scroll fadein-from-down fadein-active01">
+              <img src="image/logo.png" />
+              <p class="catch">未経験から本気でエンジニアへ</p>
+              <p class="sub">
+                「未経験から本気でエンジニア」を目指すプログラミングスクールです。
+              </p>
+              <i class="fa-solid fa-arrow-up-right-from-square"></i>
+            </a>
+          </li>
+          <li class="service-item3">
+            <img
+              src="image/6c40ac7b707e13491fda6a6b4f02d82d.jpg"
+              class="fadein-scroll fadein-from-down fadein-active01"
+            />
+            <a class="fadein-scroll fadein-from-down fadein-active01">
+              <img src="image/abb886337b510d088a858a59a12bf114.png" />
+              <p class="catch">人生を変える英会話アプリ</p>
+              <p class="sub">
+                登録者数訳25万人!YouTuber講師ジョージ監修!オンライン英会話アプリ!
+              </p>
+              <i class="fa-solid fa-arrow-up-right-from-square"></i>
+            </a>
+          </li>
         </ul>
+
+        <div class="other-wrap">
+          <a class="other fadein-scroll fadein-from-left">
+            Other service
+            <i class="fa-solid fa-circle-arrow-right"></i>
+          </a>
+        </div>
       </div>
     </main>
   </body>
