our visions is done

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <body>
     <div class="top">
       <header class="fadein-first fadein-from-up">
-        <div class="wrap">
+        <div class="wrap header-wrap">
           <img src="image/logo_green.png" class="link" />
           <nav class="nav-01">
             <ul>
@@ -114,6 +114,32 @@
             Other service
             <i class="fa-solid fa-circle-arrow-right"></i>
           </a>
+        </div>
+      </div>
+
+      <div class="vision">
+        <div class="wrap">
+          <h1 class="fadein-scroll fadein-from-up fadein-active01">
+            <span>Our Vision</span>
+          </h1>
+          <h2 class="fadein-scroll fadein-from-down fadein-active01">
+            世の中の課題をITで解決して、<br />
+            関わった<strong>世界中の人たちを幸せにする</strong>
+          </h2>
+          <ul class="fadein-scroll fadein-from-down fadein-active01">
+            <li>
+              <p class="catch">ITを通じて<br />人々の可能性を広げる</p>
+              <p class="sub">イノベーションを起こし新たな価値を創造する</p>
+            </li>
+            <li>
+              <p class="catch">世界を代表する<br />自社サービスを作る</p>
+              <p class="sub">世の中にインパクトを与える</p>
+            </li>
+            <li>
+              <p class="catch">世界から選ばれる<br />企業へ</p>
+              <p class="sub">常に最高のパフォーマンスを発揮します</p>
+            </li>
+          </ul>
         </div>
       </div>
     </main>
