news-session is done

--- a/index.html
+++ b/index.html
@@ -142,6 +142,101 @@
           </ul>
         </div>
       </div>
+
+      <div class="news">
+        <div class="wrap">
+          <h1 class="fadein-scroll fadein-from-up fadein-active01">
+            <span>News</span>
+          </h1>
+          <ul>
+            <li class="fadein-scroll fadein-from-down">
+              <img src="image/news-prtimes.png" />
+              <div class="news-content">
+                <div class="news-meta">
+                  <time>2022-06-03</time>
+                  <a>プレスリリース</a>
+                  <a>メディア</a>
+                  <a>自社サービス</a>
+                </div>
+                <div class="news-title">
+                  <a>
+                    【プレスリリース】ニーズが増大するAIや機械学習エンジニアの人材不足を解決
+                  </a>
+                </div>
+              </div>
+            </li>
+            <li class="fadein-scroll fadein-from-down">
+              <img src="image/news-prtimes.png" />
+              <div class="news-content">
+                <div class="news-meta">
+                  <time>2022-06-03</time>
+                  <a>プレスリリース</a>
+                  <a>メディア</a>
+                  <a>自社サービス</a>
+                </div>
+                <div class="news-title">
+                  <a>
+                    【プレスリリース】完全オーダーメイド型英会話アプリ『RedFire』クラウドファウンディングを始動
+                  </a>
+                </div>
+              </div>
+            </li>
+            <li class="fadein-scroll fadein-from-down">
+              <img src="image/news-prtimes.png" />
+              <div class="news-content">
+                <div class="news-meta">
+                  <time>2022-03-02</time>
+                  <a>プレスリリース</a>
+                  <a>メディア</a>
+                  <a>自社サービス</a>
+                </div>
+                <div class="news-title">
+                  <a>
+                    【プレスリリース】「利益率の高い自社サービスを創出するプロジェクトマネージメント」
+                  </a>
+                </div>
+              </div>
+            </li>
+            <li class="fadein-scroll fadein-from-down">
+              <img src="image/news-image02.png" />
+              <div class="news-content">
+                <div class="news-meta">
+                  <time>2022-02-24</time>
+                  <a>プレスリリース</a>
+                  <a>メディア</a>
+                  <a>自社サービス</a>
+                </div>
+                <div class="news-title">
+                  <a>
+                    日本開発株式会社、DXを推進するリスキリング(再教育)サービス「Educureエドゥキュア」を導入
+                  </a>
+                </div>
+              </div>
+            </li>
+            <li class="fadein-scroll fadein-from-down">
+              <img src="image/news-image03.png" />
+              <div class="news-content">
+                <div class="news-meta">
+                  <time>2022-02-22</time>
+                  <a>プレスリリース</a>
+                  <a>メディア</a>
+                  <a>自社サービス</a>
+                </div>
+                <div class="news-title">
+                  <a>
+                    【プレスリリース】販売職・コールセンターに強い人材派遣会社Evand株式会社がDXを推進するリスキリング(再教育)サービス「Educureエドゥキュア」を導入
+                  </a>
+                </div>
+              </div>
+            </li>
+          </ul>
+
+          <a class="other fadein-scroll fadein-from-left fadein-active01">
+            Other news
+            <i class="fa-solid fa-circle-arrow-right"></i>
+          </a>
+        </div>
+      </div>
     </main>
   </body>
 </html>
