about session is done

--- a/index.html
+++ b/index.html
@@ -237,6 +237,83 @@
           </a>
         </div>
       </div>
+
+      <div class="about">
+        <div class="wrap">
+          <h1 class="fadein-scroll fadein-from-up">
+            <span>About Us</span>
+          </h1>
+          <div class="about-content-inner-wrap">
+            <ul class="fadein-scroll fadein-from-up fadein-active01">
+              <li>
+                <p class="about-head">会社名</p>
+                <p class="about-data">株式会社LiNew</p>
+              </li>
+              <li>
+                <p class="about-head">代表</p>
+                <p class="about-data">CEO 西本弘昌<br />COO 井上陽介</p>
+              </li>
+              <li>
+                <p class="about-head">事業内容</p>
+                <p class="about-data">
+                  コンサルティング/システム開発、じゅたう開発/教育・研修/アウトソーシング
+                </p>
+              </li>
+              <li>
+                <p class="about-head">本社住所</p>
+                <p class="about-data">
+                  〒150-0002<br />東京都渋谷3丁目6-20　第５矢木ビル 5F<br />
+                  <a class="map-link">
+                    GoogleMap
+                    <i class="fa-solid fa-arrow-up-right-from-square"></i>
+                  </a>
+                </p>
+              </li>
+              <li>
+                <p class="about-head">福岡支社</p>
+                <p class="about-data">
+                  〒812-0011<br />福岡県福岡市博多区博多駅前4-18-19　博多フロントビル703<br />
+                  <a class="map-link">
+                    GoogleMap
+                    <i class="fa-solid fa-arrow-up-right-from-square"></i>
+                  </a>
+                </p>
+              </li>
+              <li>
+                <p class="about-head">大阪支社</p>
+                <p class="about-data">
+                  〒542-0081<br />大阪市中央区南船場3-8-7　三栄ムアビル1202<br />
+                  <a class="map-link">
+                    GoogleMap
+                    <i class="fa-solid fa-arrow-up-right-from-square"></i>
+                  </a>
+                </p>
+              </li>
+              <li>
+                <p class="about-head">京都支社</p>
+                <p class="about-data">
+                  〒606-8302<br />京都府京都市左京区吉田牛ノ宮町6-1<br />
+                  <a class="map-link">
+                    GoogleMap
+                    <i class="fa-solid fa-arrow-up-right-from-square"></i>
+                  </a>
+                </p>
+              </li>
+            </ul>
+            <img
+              src="image/IMG_0218-4.jpeg"
+              class="fadein-scroll fadein-from-down fadein-active01"
+            />
+          </div>
+        </div>
+
+        <div class="wrap">
+          <a class="other fadein-scroll fadein-from-left">
+            More info
+            <i class="fa-solid fa-circle-arrow-right"></i>
+          </a>
+        </div>
+      </div>
     </main>
   </body>
 </html>
