recruit session is done

--- a/index.html
+++ b/index.html
@@ -61,16 +61,16 @@
 
     <main>
       <div class="service">
-        <h1 class="fadein-scroll fadein-from-up fadein-active01">
+        <h1 class="fadein-scroll fadein-from-up">
           <span>Our Service</span>
         </h1>
         <ul>
           <li class="service-item1">
             <img
               src="image/educure01.jpg"
-              class="fadein-scroll fadein-from-down fadein-active01"
+              class="fadein-scroll fadein-from-down"
             />
-            <a class="fadein-scroll fadein-from-down fadein-active01">
+            <a class="fadein-scroll fadein-from-down">
               <img src="image/black.png" />
               <p class="catch">DXを推進するエンジニア育成</p>
               <p class="sub">
@@ -82,9 +82,9 @@
           <li class="service-item2">
             <img
               src="image/techpassion01.jpg"
-              class="fadein-scroll fadein-from-down fadein-active01"
+              class="fadein-scroll fadein-from-down"
             />
-            <a class="fadein-scroll fadein-from-down fadein-active01">
+            <a class="fadein-scroll fadein-from-down">
               <img src="image/logo.png" />
               <p class="catch">未経験から本気でエンジニアへ</p>
               <p class="sub">
@@ -96,9 +96,9 @@
           <li class="service-item3">
             <img
               src="image/6c40ac7b707e13491fda6a6b4f02d82d.jpg"
-              class="fadein-scroll fadein-from-down fadein-active01"
+              class="fadein-scroll fadein-from-down"
             />
-            <a class="fadein-scroll fadein-from-down fadein-active01">
+            <a class="fadein-scroll fadein-from-down">
               <img src="image/abb886337b510d088a858a59a12bf114.png" />
               <p class="catch">人生を変える英会話アプリ</p>
               <p class="sub">
@@ -119,14 +119,14 @@
 
       <div class="vision">
         <div class="wrap">
-          <h1 class="fadein-scroll fadein-from-up fadein-active01">
+          <h1 class="fadein-scroll fadein-from-up">
             <span>Our Vision</span>
           </h1>
-          <h2 class="fadein-scroll fadein-from-down fadein-active01">
+          <h2 class="fadein-scroll fadein-from-down">
             世の中の課題をITで解決して、<br />
             関わった<strong>世界中の人たちを幸せにする</strong>
           </h2>
-          <ul class="fadein-scroll fadein-from-down fadein-active01">
+          <ul class="fadein-scroll fadein-from-down">
             <li>
               <p class="catch">ITを通じて<br />人々の可能性を広げる</p>
               <p class="sub">イノベーションを起こし新たな価値を創造する</p>
@@ -145,7 +145,7 @@
 
       <div class="news">
         <div class="wrap">
-          <h1 class="fadein-scroll fadein-from-up fadein-active01">
+          <h1 class="fadein-scroll fadein-from-up">
             <span>News</span>
           </h1>
           <ul>
@@ -231,7 +231,7 @@
             </li>
           </ul>
 
-          <a class="other fadein-scroll fadein-from-left fadein-active01">
+          <a class="other fadein-scroll fadein-from-left">
             Other news
             <i class="fa-solid fa-circle-arrow-right"></i>
           </a>
@@ -244,7 +244,7 @@
             <span>About Us</span>
           </h1>
           <div class="about-content-inner-wrap">
-            <ul class="fadein-scroll fadein-from-up fadein-active01">
+            <ul class="fadein-scroll fadein-from-up">
               <li>
                 <p class="about-head">会社名</p>
                 <p class="about-data">株式会社LiNew</p>
@@ -302,12 +302,44 @@
             </ul>
             <img
               src="image/IMG_0218-4.jpeg"
-              class="fadein-scroll fadein-from-down fadein-active01"
+              class="fadein-scroll fadein-from-down"
             />
           </div>
         </div>
 
         <div class="wrap">
+          <a class="other fadein-scroll fadein-from-left">
+            More info
+            <i class="fa-solid fa-circle-arrow-right"></i>
+          </a>
+        </div>
+      </div>
+
+      <div class="recruit">
+        <div class="wrap">
+          <h1 class="fadein-scroll fadein-from-up">
+            <span>Recruit</span>
+          </h1>
+          <h2 class="fadein-scroll fadein-from-down">
+            熱いパッションを持っている<span>あなた</span>を待っています。
+          </h2>
+          <div class="recruit-jobs fadein-scroll fadein-from-down">
+            <p>現在募集中の職種</p>
+            <div class="jobs">
+              <a class="fadein-scroll fadein-from-down">
+                エンジニア
+                <i class="fa-solid fa-arrow-right"></i>
+              </a>
+              <a class="fadein-scroll fadein-from-down">
+                営業
+                <i class="fa-solid fa-arrow-right"></i>
+              </a>
+              <a class="fadein-scroll fadein-from-down">
+                PR・広報
+                <i class="fa-solid fa-arrow-right"></i>
+              </a>
+            </div>
+          </div>
           <a class="other fadein-scroll fadein-from-left">
             More info
             <i class="fa-solid fa-circle-arrow-right"></i>
