footer-session is done

--- a/index.html
+++ b/index.html
@@ -340,6 +340,7 @@
               </a>
             </div>
           </div>
+
           <a class="other fadein-scroll fadein-from-left">
             More info
             <i class="fa-solid fa-circle-arrow-right"></i>
@@ -347,5 +348,47 @@
         </div>
       </div>
     </main>
+
+    <footer>
+      <div class="wrap">
+        <div class="footer-left">
+          <a><img src="image/footer_logo.png" /></a>
+          <p>
+            〒150-0002
+            <br />
+            東京都渋谷区渋谷3丁目6-20 第5矢木ビル 5F
+            <br />
+            03-6453-8617
+          </p>
+          <small>© 2022 株式会社LiNew</small>
+        </div>
+
+        <div class="footer-right">
+          <nav>
+            <ul>
+              <li>News</li>
+              <li>About</li>
+              <li>Service</li>
+              <li>Recruit</li>
+              <li>Contact</li>
+            </ul>
+          </nav>
+          <div class="footer-service">
+            <a>
+              educure
+              <i class="fa-solid fa-arrow-right"></i>
+            </a>
+            <a>
+              TECH Passion
+              <i class="fa-solid fa-arrow-right"></i>
+            </a>
+            <a>
+              人生を変える英会話アプリ
+              <i class="fa-solid fa-arrow-right"></i>
+            </a>
+          </div>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
